--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "",
-    "start": "node index.js",
-    "test": ""
+    "start": "node index.js"
   },
   "dependencies": {
+    "nodemon": "^3.0.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6"
-  }
+    "sqlite": "^5.0.1",
+    "sqlite3":"^5.1.6"
+}
 }
